@@ -1,3 +1,4 @@
+3/7/12 eliminate duplication of saturated concentration values
 3/7/12 reduce width of concentration text field
 3/7/12 render ruler after Reset All button, so that Reset All button doesn't get obscured
 3/7/12 move model-view location debugger to upper-right
